...
        drawerContent = {
            ModalDrawerSheet(
                modifier = Modifier
                    .widthIn(max = DrawerDefaults.MaximumDrawerWidth)
                    .fillMaxWidth()
                    .clipToBounds()
                    .testTag("explore_drawer")
            ) {
                TextButton(onClick = { coroutineScope.launch { exploreDrawer.close() } }) {
                    Text(stringResource(R.string.explore_close))
                }
                ExploreScreen(
                    viewModel = exploreViewModel,
...
